{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 27,
  "lineage": "fea13ee6-1dcd-e017-6787-745c992da524",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f57860a78cde5fdc",
            "domain": "vpc",
            "id": "eipalloc-05bf2bd2faa942735",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00844de230c1e72ba",
            "private_dns": "ip-10-16-3-54.ec2.internal",
            "private_ip": "10.16.3.54",
            "public_dns": "ec2-54-226-22-99.compute-1.amazonaws.com",
            "public_ip": "54.226.22.99",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b28612a509c7d932",
            "domain": "vpc",
            "id": "eipalloc-01c13fe8e6db237c1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fa21c90d38c87fc1",
            "private_dns": "ip-10-16-5-38.ec2.internal",
            "private_ip": "10.16.5.38",
            "public_dns": "ec2-34-194-143-0.compute-1.amazonaws.com",
            "public_ip": "34.194.143.0",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0944aaf9041c7e886",
            "domain": "vpc",
            "id": "eipalloc-0ddd0003c9ef76f17",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fe8a70c26f6f4e59",
            "private_dns": "ip-10-16-9-235.ec2.internal",
            "private_ip": "10.16.9.235",
            "public_dns": "ec2-54-173-105-162.compute-1.amazonaws.com",
            "public_ip": "54.173.105.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:internet-gateway/igw-06266b400f6be34c7",
            "id": "igw-06266b400f6be34c7",
            "owner_id": "836079437595",
            "tags": {
              "Name": "dev-eks-igw"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bf2bd2faa942735",
            "id": "nat-0d9e0864fb395a190",
            "network_interface_id": "eni-00844de230c1e72ba",
            "private_ip": "10.16.3.54",
            "public_ip": "54.226.22.99",
            "subnet_id": "subnet-0f2afd3357e724728",
            "tags": {
              "Name": "miq-dev-NatGW-pub-sub-fw-protected-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c13fe8e6db237c1",
            "id": "nat-03611f35b25facea3",
            "network_interface_id": "eni-0fa21c90d38c87fc1",
            "private_ip": "10.16.5.38",
            "public_ip": "34.194.143.0",
            "subnet_id": "subnet-04b1918f56cd908a7",
            "tags": {
              "Name": "miq-dev-NatGW-pub-sub-fw-protected-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddd0003c9ef76f17",
            "id": "nat-0d5b833edf3734dd9",
            "network_interface_id": "eni-0fe8a70c26f6f4e59",
            "private_ip": "10.16.9.235",
            "public_ip": "54.173.105.162",
            "subnet_id": "subnet-018b32be1a73dd6f9",
            "tags": {
              "Name": "miq-dev-NatGW-pub-sub-fw-protected-3"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "eks2itvpc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a2a13f5222e1af2c3529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2a13f5222e1af2c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
          },
          "dependencies": [
            "aws_route_table.private-dev",
            "aws_vpc.development",
            "aws_vpc_peering_connection.eks2itvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07efa3e7fcaa8e31f3529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07efa3e7fcaa8e31f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
          },
          "dependencies": [
            "aws_route_table.private-dev",
            "aws_vpc.development",
            "aws_vpc_peering_connection.eks2itvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b01175aa5ddb72cb3529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b01175aa5ddb72cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
          },
          "dependencies": [
            "aws_route_table.private-dev",
            "aws_vpc.development",
            "aws_vpc_peering_connection.eks2itvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "eks2itvpc_private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe26c09d6b78983a3529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe26c09d6b78983a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
          },
          "dependencies": [
            "aws_route_table.private-dev-db",
            "aws_vpc.development",
            "aws_vpc_peering_connection.eks2itvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3aa21bd7ec2ff693529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3aa21bd7ec2ff69",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
          },
          "dependencies": [
            "aws_route_table.private-dev-db",
            "aws_vpc.development",
            "aws_vpc_peering_connection.eks2itvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6a92fb37f74eb793529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6a92fb37f74eb79",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
          },
          "dependencies": [
            "aws_route_table.private-dev-db",
            "aws_vpc.development",
            "aws_vpc_peering_connection.eks2itvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06266b400f6be34c7",
            "id": "r-rtb-0ca1617554442e3711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca1617554442e371",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.dev",
            "aws_route_table.public-dev",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a2a13f5222e1af2c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d9e0864fb395a190",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2a13f5222e1af2c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private-dev",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07efa3e7fcaa8e31f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03611f35b25facea3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07efa3e7fcaa8e31f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private-dev",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b01175aa5ddb72cb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d5b833edf3734dd9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b01175aa5ddb72cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private-dev",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gtw_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe26c09d6b78983a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d9e0864fb395a190",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe26c09d6b78983a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private-dev-db",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3aa21bd7ec2ff691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03611f35b25facea3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3aa21bd7ec2ff69",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private-dev-db",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6a92fb37f74eb791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d5b833edf3734dd9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6a92fb37f74eb79",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private-dev-db",
            "aws_subnet.public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a2a13f5222e1af2c",
            "owner_id": "836079437595",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9e0864fb395a190",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.11.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
              }
            ],
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "private-route-table-dev",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07efa3e7fcaa8e31f",
            "owner_id": "836079437595",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03611f35b25facea3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.11.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
              }
            ],
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "private-route-table-dev",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b01175aa5ddb72cb",
            "owner_id": "836079437595",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5b833edf3734dd9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.11.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
              }
            ],
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "private-route-table-dev",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-dev-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe26c09d6b78983a",
            "owner_id": "836079437595",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9e0864fb395a190",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.11.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
              }
            ],
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "private-route-table-dev-db",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f3aa21bd7ec2ff69",
            "owner_id": "836079437595",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03611f35b25facea3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.11.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
              }
            ],
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "private-route-table-dev-db",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f6a92fb37f74eb79",
            "owner_id": "836079437595",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5b833edf3734dd9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.11.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-002e01ae543ad8a50"
              }
            ],
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "private-route-table-dev-db",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ca1617554442e371",
            "owner_id": "836079437595",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06266b400f6be34c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "Firewall-public-route-table-dev",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096aa08e23bc14c88",
            "route_table_id": "rtb-0a2a13f5222e1af2c",
            "subnet_id": "subnet-0cf37863f39361a95"
          },
          "dependencies": [
            "aws_route_table.private-dev",
            "aws_subnet.private-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026bc13e1c0fc327a",
            "route_table_id": "rtb-07efa3e7fcaa8e31f",
            "subnet_id": "subnet-0acb01add82d7db5f"
          },
          "dependencies": [
            "aws_route_table.private-dev",
            "aws_subnet.private-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0903400be821c8bb3",
            "route_table_id": "rtb-0b01175aa5ddb72cb",
            "subnet_id": "subnet-0673ae596da57e2db"
          },
          "dependencies": [
            "aws_route_table.private-dev",
            "aws_subnet.private-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-dev-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05af07c2cbc28dd51",
            "route_table_id": "rtb-0fe26c09d6b78983a",
            "subnet_id": "subnet-0d7b614765f3f2f89"
          },
          "dependencies": [
            "aws_route_table.private-dev-db",
            "aws_subnet.private-dev-db",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6aa01ac857fe442",
            "route_table_id": "rtb-0f3aa21bd7ec2ff69",
            "subnet_id": "subnet-090645ace4b8289bb"
          },
          "dependencies": [
            "aws_route_table.private-dev-db",
            "aws_subnet.private-dev-db",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2f16cf15e32c37b",
            "route_table_id": "rtb-0f6a92fb37f74eb79",
            "subnet_id": "subnet-0ab8034f45c905043"
          },
          "dependencies": [
            "aws_route_table.private-dev-db",
            "aws_subnet.private-dev-db",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b6230b68239371a",
            "route_table_id": "rtb-0ca1617554442e371",
            "subnet_id": "subnet-046d5bb06ca9ebd85"
          },
          "dependencies": [
            "aws_route_table.public-dev",
            "aws_subnet.firewall-public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdb1a3debd25202d",
            "route_table_id": "rtb-0ca1617554442e371",
            "subnet_id": "subnet-02666d7a1b779518f"
          },
          "dependencies": [
            "aws_route_table.public-dev",
            "aws_subnet.firewall-public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eefb108466bf3e9b",
            "route_table_id": "rtb-0ca1617554442e371",
            "subnet_id": "subnet-025f141861088cf99"
          },
          "dependencies": [
            "aws_route_table.public-dev",
            "aws_subnet.firewall-public-dev",
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:security-group/sg-0c78704b3c765d322",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c78704b3c765d322",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "Allow access to API Server with VPN",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de00ea9f53dc1733"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-dev-cluster-sg",
            "name_prefix": "",
            "owner_id": "836079437595",
            "revoke_rules_on_delete": false,
            "tags": {
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-dev",
              "OWNER": "SURESH",
              "PRODUCT": "EKS-DEV",
              "TEAM": "DEVOPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:security-group/sg-0de00ea9f53dc1733",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2465,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2465
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 444
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 465,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 465
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 587,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 993,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 993
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "MIQ VPN IP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "Slef vpc CIDR",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0de00ea9f53dc1733",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "Allow traffic from IT VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "Allow node to communicate within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "kubernetes.io/rule/nlb/client=a8b1fe3519f7646f39141b57e82a1c64",
                "from_port": 31898,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31898
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "kubernetes.io/rule/nlb/client=a8b1fe3519f7646f39141b57e82a1c64",
                "from_port": 32209,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32209
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "kubernetes.io/rule/nlb/mtu",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [
                  "10.16.48.0/20",
                  "10.16.32.0/20",
                  "10.16.64.0/20"
                ],
                "description": "kubernetes.io/rule/nlb/health=a8b1fe3519f7646f39141b57e82a1c64",
                "from_port": 31487,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31487
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-01f5eb8e5b2369b3b",
                  "sg-0531b4e70f594ff43"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0252c39568aa2bc8f",
                  "sg-0851ad5df9802e878",
                  "sg-0c1cb524ed302f09c",
                  "sg-0f09a9e6f28cd90f4"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow HPA to receive communication from the cluster control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c78704b3c765d322"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow HPA to receive communication from the cluster control plane",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c78704b3c765d322"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c78704b3c765d322"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "SonarRDS SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d039eccd02e39194"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Vault LB GS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a5ff62b267decd75"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "elbv2.k8s.aws/targetGroupBinding=shared",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000b0ada74bd55704"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "elbv2.k8s.aws/targetGroupBinding=shared",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b5a39681865e0d9"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-eks-dev-node",
            "name_prefix": "",
            "owner_id": "836079437595",
            "revoke_rules_on_delete": false,
            "tags": {
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-dev-node",
              "OWNER": "SURESH",
              "PRODUCT": "EKS-DEV",
              "TEAM": "DEVOPS",
              "kubernetes.io/cluster/eks-develop": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:security-group/sg-0d039eccd02e39194",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0d039eccd02e39194",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "Allow IT VPC to communicate with MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "Allow IT VPC to communicate with Memcached",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "Allow IT VPC to communicate with PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "Allow IT VPC to communicate with Redshift",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16",
                  "10.11.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16",
                  "10.11.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "Allow Dev VPC to communicate with MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "Allow Dev VPC to communicate with Memcached",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "Allow Dev VPC to communicate with Redshift",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              },
              {
                "cidr_blocks": [
                  "3.81.44.43/32"
                ],
                "description": "qubole bastion public ip",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "From EKS Node SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0de00ea9f53dc1733"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-dev-rds-private",
            "name_prefix": "",
            "owner_id": "836079437595",
            "revoke_rules_on_delete": false,
            "tags": {
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-rds-dev",
              "OWNER": "SURESH",
              "PRODUCT": "EKS-DEV",
              "TEAM": "DEVOPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-cluster-ingress-it-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.11.0.0/16"
            ],
            "description": "Allow access to API Server with VPN",
            "from_port": 443,
            "id": "sgrule-608770512",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c78704b3c765d322",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-cluster-sg",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-cluster-ingress-node-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2378211655",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c78704b3c765d322",
            "self": false,
            "source_security_group_id": "sg-0de00ea9f53dc1733",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-cluster-sg",
            "aws_security_group.dev-node",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-node-ingress-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3417759592",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de00ea9f53dc1733",
            "self": false,
            "source_security_group_id": "sg-0c78704b3c765d322",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-cluster-sg",
            "aws_security_group.dev-node",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-node-ingress-hpa-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HPA to receive communication from the cluster control plane",
            "from_port": 80,
            "id": "sgrule-3281789418",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de00ea9f53dc1733",
            "self": false,
            "source_security_group_id": "sg-0c78704b3c765d322",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-cluster-sg",
            "aws_security_group.dev-node",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-node-ingress-hpa-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HPA to receive communication from the cluster control plane",
            "from_port": 443,
            "id": "sgrule-461601813",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de00ea9f53dc1733",
            "self": false,
            "source_security_group_id": "sg-0c78704b3c765d322",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-cluster-sg",
            "aws_security_group.dev-node",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-node-ingress-itvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.11.0.0/16"
            ],
            "description": "Allow traffic from IT VPC",
            "from_port": 0,
            "id": "sgrule-1781952679",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0de00ea9f53dc1733",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-node",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-node-ingress-self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-4191452949",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0de00ea9f53dc1733",
            "self": false,
            "source_security_group_id": "sg-0de00ea9f53dc1733",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-node",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-node-ingress-self-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.16.0.0/16"
            ],
            "description": "Allow node to communicate within VPC",
            "from_port": 0,
            "id": "sgrule-240590190",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0de00ea9f53dc1733",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-node",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-rds-ingress-dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.16.0.0/16"
            ],
            "description": "Allow Dev VPC to communicate with MYSQL/Aurora",
            "from_port": 3306,
            "id": "sgrule-401040622",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d039eccd02e39194",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-rds-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-rds-ingress-it-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.11.0.0/16"
            ],
            "description": "Allow IT VPC to communicate with MYSQL/Aurora",
            "from_port": 3306,
            "id": "sgrule-1938164007",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d039eccd02e39194",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.dev-rds-sg",
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall-public-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-046d5bb06ca9ebd85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.12.0/22",
            "id": "subnet-046d5bb06ca9ebd85",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "Name": "terraform-eks-public-firewall-subnet"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-02666d7a1b779518f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.16.0/22",
            "id": "subnet-02666d7a1b779518f",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "Name": "terraform-eks-public-firewall-subnet"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-025f141861088cf99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.20.0/22",
            "id": "subnet-025f141861088cf99",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "Name": "terraform-eks-public-firewall-subnet"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-0cf37863f39361a95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.32.0/20",
            "id": "subnet-0cf37863f39361a95",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "Environment": "Prod",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-private-subnet-app",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT",
              "Tier": "Private",
              "kubernetes.io/cluster/eks-develop": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-0acb01add82d7db5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.48.0/20",
            "id": "subnet-0acb01add82d7db5f",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "Environment": "Prod",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-private-subnet-app",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT",
              "Tier": "Private",
              "kubernetes.io/cluster/eks-develop": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-0673ae596da57e2db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.64.0/20",
            "id": "subnet-0673ae596da57e2db",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "Environment": "Prod",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-private-subnet-app",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT",
              "Tier": "Private",
              "kubernetes.io/cluster/eks-develop": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-dev-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-0d7b614765f3f2f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.80.0/20",
            "id": "subnet-0d7b614765f3f2f89",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-private-subnet-db",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-090645ace4b8289bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.96.0/20",
            "id": "subnet-090645ace4b8289bb",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-private-subnet-db",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-0ab8034f45c905043",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.112.0/20",
            "id": "subnet-0ab8034f45c905043",
            "map_public_ip_on_launch": false,
            "owner_id": "836079437595",
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-private-subnet-db",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-0f2afd3357e724728",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.0.0/22",
            "id": "subnet-0f2afd3357e724728",
            "map_public_ip_on_launch": true,
            "owner_id": "836079437595",
            "tags": {
              "Environment": "Prod",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-public-subnet-firewall-protected",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT",
              "Tier": "Public",
              "kubernetes.io/cluster/eks-develop": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-04b1918f56cd908a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.4.0/22",
            "id": "subnet-04b1918f56cd908a7",
            "map_public_ip_on_launch": true,
            "owner_id": "836079437595",
            "tags": {
              "Environment": "Prod",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-public-subnet-firewall-protected",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT",
              "Tier": "Public",
              "kubernetes.io/cluster/eks-develop": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:subnet/subnet-018b32be1a73dd6f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.8.0/22",
            "id": "subnet-018b32be1a73dd6f9",
            "map_public_ip_on_launch": true,
            "owner_id": "836079437595",
            "tags": {
              "Environment": "Prod",
              "FUNCTION": "EKS-DEV",
              "Name": "terraform-eks-public-subnet-firewall-protected",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT",
              "Tier": "Public",
              "kubernetes.io/cluster/eks-develop": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:vpc/vpc-017a10e7baaa211f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-04db295ca9bd8a42b",
            "default_route_table_id": "rtb-0f8ec8e87ac21a922",
            "default_security_group_id": "sg-0d52d6b5a25cd3c4a",
            "dhcp_options_id": "dopt-18054462",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-017a10e7baaa211f9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f8ec8e87ac21a922",
            "owner_id": "836079437595",
            "tags": {
              "Name": "MiQ-Dev",
              "kubernetes.io/cluster/eks-develop": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836079437595:vpc-endpoint/vpce-0da7974b5efc84d6b",
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.0.0/18"
            ],
            "id": "vpce-0da7974b5efc84d6b",
            "owner_id": "836079437595",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07efa3e7fcaa8e31f",
              "rtb-0a2a13f5222e1af2c",
              "rtb-0b01175aa5ddb72cb",
              "rtb-0f3aa21bd7ec2ff69",
              "rtb-0f6a92fb37f74eb79",
              "rtb-0fe26c09d6b78983a"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "ENVIRONMENT": "DEVELOPMENT",
              "FUNCTION": "EKS-DEV",
              "Name": "eks-dev-s3-endpoint",
              "OWNER": "SONY",
              "PRODUCT": "EKS-DEV",
              "TEAM": "IT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "eks2itvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "auto_accept": false,
            "id": "pcx-002e01ae543ad8a50",
            "peer_owner_id": "654856854863",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-0e3d89d7f54662593",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Requester"
            },
            "vpc_id": "vpc-017a10e7baaa211f9"
          },
          "dependencies": [
            "aws_vpc.development"
          ]
        }
      ]
    }
  ]
}